자동차경주 step5 (#5153)
* refactor: 예외 메시지 String.format 적용

* refactor: Unmodifiable Collection 적용

* refactor: List<String> 으로 변환후에 반환 작업

* refactor: List.of 적용

* refactor: Random로직 분리 작업

* refacter: car에 전략 보내기

* refacter: cars 방어적 복사 작업